--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -13,7 +13,7 @@ bs4
 # tensorflow-gpu
 # tf-nightly-gpu
 # tf-nightly-gpu-2.0-preview
-tensorflow-gpu==2.0.0-beta
+# tensorflow-gpu==2.0.0-beta
 sklearn
 xgboost
 seaborn
@@ -30,3 +30,5 @@ texttable
 jupyter
 keras-rectified-adam
 wandb
+spacy
+textblob
