--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -4,7 +4,6 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-appnope==0.1.0            # via ipython
 argh==0.26.2              # via watchdog
 attrs==19.1.0             # via jsonschema
 backcall==0.1.0           # via ipython
@@ -36,9 +35,10 @@ gpustat==0.6.0
 gql==0.1.0                # via wandb
 graphql-core==2.2.1       # via gql
 idna==2.8                 # via requests
+imageio==2.5.0            # via scikit-image
 ipykernel==5.1.2          # via ipywidgets, jupyter, jupyter-console, notebook, qtconsole
 ipython-genutils==0.2.0   # via nbformat, notebook, qtconsole, traitlets
-ipython==7.8.0            # via ipykernel, ipywidgets, jupyter-console
+ipython==7.8.0            # via ipykernel, ipywidgets, jupyter-console, shap
 ipywidgets==7.5.1         # via jupyter
 iso8601==0.1.12
 jedi==0.15.1              # via ipython
@@ -53,12 +53,12 @@ jupyter==1.0.0
 kiwisolver==1.1.0         # via matplotlib
 lxml==4.4.1
 markupsafe==1.1.1         # via jinja2
-matplotlib==3.1.1         # via seaborn
+matplotlib==3.1.1         # via scikit-image, seaborn, shap
 mistune==0.8.4            # via nbconvert
 murmurhash==1.0.2         # via spacy, thinc
 nbconvert==5.6.0          # via jupyter, notebook
 nbformat==4.4.0           # via ipywidgets, nbconvert, notebook
-networkx==2.3             # via snorkel
+networkx==2.3             # via scikit-image
 nltk==3.4.5
 notebook==6.0.1           # via jupyter, widgetsnbextension
 numpy==1.17.2
@@ -69,6 +69,7 @@ parso==0.5.1              # via jedi
 pathtools==0.1.2          # via watchdog
 pexpect==4.7.0            # via ipython
 pickleshare==0.7.5        # via ipython
+pillow==6.1.0             # via imageio, scikit-image
 pip-tools==4.1.0
 plac==0.9.6               # via spacy, thinc
 preshed==2.0.1            # via spacy, thinc
@@ -86,6 +87,7 @@ pyrsistent==0.15.4        # via jsonschema
 pyspark==2.4.4
 python-dateutil==2.8.0    # via botocore, jupyter-client, matplotlib, pandas, wandb
 pytz==2019.2              # via pandas
+pywavelets==1.0.3         # via scikit-image
 pyyaml==5.1.2             # via watchdog
 pyzmq==18.1.0             # via jupyter-client, notebook
 qtconsole==4.5.5          # via jupyter
@@ -93,28 +95,30 @@ requests==2.22.0
 rx==1.6.1                 # via graphql-core
 s3fs==0.3.4
 s3transfer==0.2.1         # via boto3
+scikit-image==0.15.0      # via shap
 scikit-learn==0.21.3
-scipy==1.3.1              # via gensim, scikit-learn, seaborn, snorkel
+scipy==1.3.1              # via gensim, scikit-image, scikit-learn, seaborn, shap
 seaborn==0.9.0
 send2trash==1.5.0         # via notebook
 sentry-sdk==0.12.2        # via wandb
+shap==0.30.1
 shortuuid==0.5.0          # via wandb
 six==1.12.0               # via bleach, blessings, cycler, docker-pycreds, gensim, gpustat, gql, graphql-core, jsonschema, nltk, pip-tools, promise, prompt-toolkit, protobuf, pyarrow, pyrsistent, python-dateutil, tensorboardx, tensorflow-hub, traitlets, wandb
 smart-open==1.8.4         # via gensim
 smmap2==2.0.5             # via gitdb2
-snorkel==0.9.1
+git+git://github.com/rjurney/snorkel.git@snorkel-1475#egg=snorkel
 soupsieve==1.9.3          # via beautifulsoup4
 spacy==2.1.8
 srsly==0.1.0              # via spacy, thinc
 subprocess32==3.5.4       # via wandb
-tensorboardx==1.8         # via snorkel
+tensorboardx==1.8
 tensorflow-hub==0.5.0
 terminado==0.8.2          # via notebook
 testpath==0.4.2           # via nbconvert
 textblob==0.15.3
 texttable==1.6.2
 thinc==7.0.8              # via spacy
-torch==1.1.0.post2        # via snorkel
+torch==1.1.0
 tornado==6.0.3            # via ipykernel, jupyter-client, notebook, terminado
 tqdm==4.36.1
 traitlets==4.3.2          # via ipykernel, ipython, ipywidgets, jupyter-client, jupyter-core, nbconvert, nbformat, notebook, qtconsole
