--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -4,7 +4,9 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+absl-py==0.8.0            # via tensorboard, tensorflow-gpu
 argh==0.26.2              # via watchdog
+astor==0.8.0              # via tensorflow-gpu
 attrs==19.1.0             # via jsonschema
 backcall==0.1.0           # via ipython
 beautifulsoup4==4.8.0
@@ -28,12 +30,16 @@ entrypoints==0.3          # via nbconvert
 findspark==1.3.0
 frozendict==1.2
 fsspec==0.5.1             # via s3fs
+gast==0.2.2               # via tensorflow-gpu
 gensim==3.8.0
 gitdb2==2.0.5             # via gitpython
 gitpython==3.0.2          # via wandb
+google-pasta==0.1.7       # via tensorflow-gpu
 gpustat==0.6.0
 gql==0.1.0                # via wandb
 graphql-core==2.2.1       # via gql
+grpcio==1.24.0            # via tensorboard, tensorflow-gpu
+h5py==2.10.0              # via keras-applications
 idna==2.8                 # via requests
 imageio==2.5.0            # via scikit-image
 ipykernel==5.1.2          # via ipywidgets, jupyter, jupyter-console, notebook, qtconsole
@@ -50,8 +56,11 @@ jupyter-client==5.3.3     # via ipykernel, jupyter-console, notebook, qtconsole
 jupyter-console==6.0.0    # via jupyter
 jupyter-core==4.5.0       # via jupyter-client, nbconvert, nbformat, notebook, qtconsole
 jupyter==1.0.0
+keras-applications==1.0.8  # via tensorflow-gpu
+keras-preprocessing==1.1.0  # via tensorflow-gpu
 kiwisolver==1.1.0         # via matplotlib
 lxml==4.4.1
+markdown==3.1.1           # via tensorboard
 markupsafe==1.1.1         # via jinja2
 matplotlib==3.1.1         # via scikit-image, seaborn, shap
 mistune==0.8.4            # via nbconvert
@@ -63,6 +72,7 @@ nltk==3.4.5
 notebook==6.0.1           # via jupyter, widgetsnbextension
 numpy==1.17.2
 nvidia-ml-py3==7.352.0    # via gpustat, wandb
+opt-einsum==3.0.1         # via tensorflow-gpu
 pandas==0.24.2
 pandocfilters==1.4.2      # via nbconvert
 parso==0.5.1              # via jedi
@@ -76,7 +86,7 @@ preshed==2.0.1            # via spacy, thinc
 prometheus-client==0.7.1  # via notebook
 promise==2.2.1            # via gql, graphql-core
 prompt-toolkit==2.0.9     # via ipython, jupyter-console
-protobuf==3.9.2           # via tensorboardx, tensorflow-hub
+protobuf==3.9.2           # via tensorboard, tensorboardx, tensorflow-gpu, tensorflow-hub
 psutil==5.6.3             # via gpustat, wandb
 ptyprocess==0.6.0         # via pexpect, terminado
 py4j==0.10.7              # via pyspark
@@ -103,7 +113,7 @@ send2trash==1.5.0         # via notebook
 sentry-sdk==0.12.2        # via wandb
 shap==0.30.1
 shortuuid==0.5.0          # via wandb
-six==1.12.0               # via bleach, blessings, cycler, docker-pycreds, gensim, gpustat, gql, graphql-core, jsonschema, nltk, pip-tools, promise, prompt-toolkit, protobuf, pyarrow, pyrsistent, python-dateutil, tensorboardx, tensorflow-hub, traitlets, wandb
+six==1.12.0               # via absl-py, bleach, blessings, cycler, docker-pycreds, gensim, gpustat, gql, graphql-core, grpcio, h5py, jsonschema, keras-preprocessing, nltk, pip-tools, promise, prompt-toolkit, protobuf, pyarrow, pyrsistent, python-dateutil, tensorboard, tensorboardx, tensorflow-gpu, tensorflow-hub, traitlets, wandb
 smart-open==1.8.4         # via gensim
 smmap2==2.0.5             # via gitdb2
 git+git://github.com/rjurney/snorkel.git@snorkel-1475#egg=snorkel
@@ -111,12 +121,16 @@ soupsieve==1.9.3          # via beautifulsoup4
 spacy==2.1.8
 srsly==0.1.0              # via spacy, thinc
 subprocess32==3.5.4       # via wandb
+tensorboard==2.0.0        # via tensorflow-gpu
 tensorboardx==1.8
+tensorflow-gpu==2.0.0rc2
 tensorflow-hub==0.5.0
+termcolor==1.1.0          # via tensorflow-gpu
 terminado==0.8.2          # via notebook
 testpath==0.4.2           # via nbconvert
 textblob==0.15.3
 texttable==1.6.2
+tf-estimator-nightly==1.14.0.dev2019080601  # via tensorflow-gpu
 thinc==7.0.8              # via spacy
 torch==1.1.0
 tornado==6.0.3            # via ipykernel, jupyter-client, notebook, terminado
@@ -128,7 +142,10 @@ wasabi==0.2.2             # via spacy, thinc
 watchdog==0.9.0           # via wandb
 wcwidth==0.1.7            # via prompt-toolkit
 webencodings==0.5.1       # via bleach
+werkzeug==0.16.0          # via tensorboard
+wheel==0.33.6             # via tensorboard, tensorflow-gpu
 widgetsnbextension==3.5.1  # via ipywidgets
+wrapt==1.11.2             # via tensorflow-gpu
 
 # The following packages are considered to be unsafe in a requirements file:
-# setuptools==41.2.0        # via ipython, jsonschema, kiwisolver, protobuf
+# setuptools==41.2.0        # via ipython, jsonschema, kiwisolver, markdown, protobuf, tensorboard
