--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@
 *.graffle filter=lfs diff=lfs merge=lfs -text
 *.plist filter=lfs diff=lfs merge=lfs -text
 *.tiff filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
